@@ -1,3 +1,8 @@
+Tue Nov 23 09:15:23 UTC 2010  Marijke Hengstmengel <mhengstmengel@remedy.nl>
+
+        * TAO_IDL/be/be_visitor_component/servant_svh.cpp:
+        Set unused member variable provide_ in Servant class between ifdef lw_ccm.
+
 Mon Nov 22 19:57:23 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/fe/lex.yy.cpp:
